--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=survivor-draft.html">
-  <title>Survivor 50 – Fantasy Draft</title>
+  <title>Survivor 50 - Fantasy Draft</title>
 </head>
 <body>
   <script>window.location.replace("survivor-draft.html");</script>
