--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=survivor-draft.html">
+  <link rel="icon" type="image/png" href="favicon.png">
   <title>Survivor 50 - Fantasy Draft</title>
 </head>
 <body>
