Add scoring guide page and link from main app header

--- a/survivor-draft.html
+++ b/survivor-draft.html
@@ -630,6 +630,7 @@
         <h1>Survivor 50 — Fantasy Leagues</h1>
       </div>
       <div class="leagues-header-actions">
+        <a href="scoring.html" class="btn btn-secondary btn-sm">📊 Scoring</a>
         <a href="tracker-entry.html" class="btn btn-secondary btn-sm">📋 Log Episode</a>
         <button class="btn btn-secondary btn-sm" id="leagues-refresh-btn">🔄 Refresh</button>
         <button class="btn btn-secondary btn-sm" id="leagues-export-btn">⬇ Save to File</button>
