Update scoring: individual immunity +5, individual reward +3, add tribe immunity/reward +1 each

--- a/scoring.html
+++ b/scoring.html
@@ -167,7 +167,7 @@
   <div class="totals-banner">
     <div class="totals-banner-item">
       <span class="totals-banner-label">Best possible episode</span>
-      <span class="totals-banner-value pos">+10</span>
+      <span class="totals-banner-value pos">+14</span>
     </div>
     <div class="totals-banner-item">
       <span class="totals-banner-label">Win the season</span>
@@ -219,10 +219,18 @@
 
     <div class="score-row">
       <span class="score-label">🛡️ Wins Individual Immunity</span>
+      <span class="score-badge pos">+5</span>
+    </div>
+    <div class="score-row">
+      <span class="score-label">🎁 Wins Individual Reward Challenge</span>
+      <span class="score-badge pos">+3</span>
+    </div>
+    <div class="score-row">
+      <span class="score-label">🏹 Tribe Wins Immunity</span>
       <span class="score-badge pos">+1</span>
     </div>
     <div class="score-row">
-      <span class="score-label">🎁 Wins Reward Challenge</span>
+      <span class="score-label">🎁 Tribe Wins Reward Challenge</span>
       <span class="score-badge pos">+1</span>
     </div>
     <div class="score-row">
