--- a/survivor-draft.html
+++ b/survivor-draft.html
@@ -874,8 +874,10 @@ const SCORING_CATEGORIES = [
   { id: "makes_jury",        label: "Makes the Jury",                       points:  1  },
   { id: "makes_finale",      label: "Makes Final Tribal Council",           points:  10 },
   { id: "sole_survivor",     label: "Wins the Season",                      points:  20 },
-  { id: "immunity_win",      label: "Wins Individual Immunity",             points:  1  },
-  { id: "reward_win",        label: "Wins Reward Challenge",                points:  1  },
+  { id: "immunity_win",      label: "Wins Individual Immunity",             points:  5  },
+  { id: "reward_win",        label: "Wins Individual Reward Challenge",     points:  3  },
+  { id: "tribe_immunity",    label: "Tribe Wins Immunity",                  points:  1  },
+  { id: "tribe_reward",      label: "Tribe Wins Reward Challenge",          points:  1  },
   // --- Game Play ---
   { id: "idol_play_self",    label: "Correctly Plays Idol on Self",         points:  3  },
   { id: "idol_play_other",   label: "Correctly Plays Idol on Someone Else", points:  4  },
