--- a/tracker-entry.html
+++ b/tracker-entry.html
@@ -330,8 +330,10 @@ const SCORING_CATEGORIES = [
   { id: "makes_jury",        label: "Makes the Jury",                       points:  1,  section: "Basic" },
   { id: "makes_finale",      label: "Makes Final Tribal Council",           points:  10, section: "Basic" },
   { id: "sole_survivor",     label: "Wins the Season",                      points:  20, section: "Basic" },
-  { id: "immunity_win",      label: "Wins Individual Immunity",             points:  1,  section: "Basic" },
-  { id: "reward_win",        label: "Wins Reward Challenge",                points:  1,  section: "Basic" },
+  { id: "immunity_win",      label: "Wins Individual Immunity",             points:  5,  section: "Basic" },
+  { id: "reward_win",        label: "Wins Individual Reward Challenge",     points:  3,  section: "Basic" },
+  { id: "tribe_immunity",    label: "Tribe Wins Immunity",                  points:  1,  section: "Basic" },
+  { id: "tribe_reward",      label: "Tribe Wins Reward Challenge",          points:  1,  section: "Basic" },
   // --- Game Play ---
   { id: "idol_play_self",    label: "Correctly Plays Idol on Self",         points:  3,  section: "Game Play" },
   { id: "idol_play_other",   label: "Correctly Plays Idol on Someone Else", points:  4,  section: "Game Play" },
